--- a/root/src/package.json
+++ b/root/src/package.json
@@ -19,4 +19,13 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
-  "devD
+  "devDependencies": {
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
+  }
+}
