--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.263.1",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@vercel/postgres": "^1.0.0" // Add this line
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
