--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "react-error-boundary": "^4.0.12"
   }
 }
