--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/postgres": "^0.7.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
@@ -17,16 +21,17 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.263.1",
     "next": "14.1.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.10.4",
+    "react-error-boundary": "^4.0.12",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "react-error-boundary": "^4.0.12"
+    "typescript": "5.3.3"
   }
 }
