--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.10.4",
+    "react-day-picker": "^8.10.0",
     "react-error-boundary": "^4.0.12",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.4.1",
