--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-progress":"^1.0.7",
     "@radix-ui/react-tabs": "^1.0.4",
     "@vercel/postgres": "^0.7.2",
     "@types/node": "20.11.5",
