--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/react-progress":"^1.0.7",
