--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@radix-ui/react-progress":"^1.0.7",
+    "@radix-ui/react-progress": "^1.0.7",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@types/lodash": "^4.14.202",
     "@vercel/postgres": "^0.7.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
@@ -25,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
     "next": "14.1.0",
     "postcss": "8.4.33",
