--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-progress": "^1.0.7",
     "@radix-ui/react-tabs": "^1.0.4",
     "@types/lodash": "^4.14.202",
+    "@vercel/blob": "^0.18.0",
     "@vercel/postgres": "^0.7.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
